2009-03-09  Anders Carlsson  <andersca@apple.com>

        Reviewed by Kevin Decker.

        WebKit side of <rdar://problem/6530007>
        
        * Plugins/Hosted/NetscapePluginHostProxy.mm:
        (WKPCEnumerate):
        Call NetscapePluginInstanceProxy::enumerate.
        
        * Plugins/Hosted/NetscapePluginInstanceProxy.h:
        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:
        (WebKit::NetscapePluginInstanceProxy::enumerate):
        Enumerate the JS object and serialize its values.
        
        * Plugins/Hosted/ProxyInstance.h:
        * Plugins/Hosted/ProxyInstance.mm:
        (WebKit::ProxyInstance::getPropertyNames):
        Ask the plug-in host to get the property names and deserialize them.
        
        * Plugins/Hosted/WebKitPluginClient.defs:
        * Plugins/Hosted/WebKitPluginHost.defs:

2009-03-09  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Oliver Hunt and Cameron Zwarich

        https://bugs.webkit.org/show_bug.cgi?id=24440
        
        The sublayer added to WebHTMLView to host accelerated compositing layers needs to
        be a subclass of NSView which allows context menu clicks through.

        * WebView/WebHTMLView.mm:
        (-[WebLayerHostingView rightMouseDown:]):
        (-[WebHTMLView attachRootLayer:]):

2009-03-08  Mark Rowe  <mrowe@apple.com>

        Reviewed by Oliver Hunt.

        Split ScrollAlignment and ScrollBehavior out of RenderLayer.h so that
        Frame.h no longer needs to include it.  This cuts the size of the symbols
        for a debug build by around 3%.

        * Plugins/WebNetscapePluginView.mm:
        * WebView/WebFrame.mm:
        (-[WebFrame _scrollDOMRangeToVisible:]):
        (-[WebFrame _insertParagraphSeparatorInQuotedContent]):
        (-[WebFrame _replaceSelectionWithFragment:selectReplacement:smartReplace:matchStyle:]):
        * WebView/WebHTMLView.mm:
        (-[WebHTMLView jumpToSelection:]):
        (-[WebHTMLView centerSelectionInVisibleArea:]):
