@@ -824,8 +824,8 @@ static inline WebDataSource *dataSource(DocumentLoader* loader)
 
     RefPtr<Range> range = _private->coreFrame->document()->createRange();
     int exception = 0;
-    range->setStart(newStart.node(), newStart.offset(), exception);
-    range->setEnd(newStart.node(), newStart.offset(), exception);
+    range->setStart(newStart.node(), newStart.m_offset, exception);
+    range->setEnd(newStart.node(), newStart.m_offset, exception);
     return [DOMRange _wrapRange:range.get()];
 }
 
