@@ -1065,7 +1065,7 @@ QVariant QWebPage::inputMethodQuery(Qt::InputMethodQuery property) const
         if (frame) {
             VisibleSelection selection = frame->selection()->selection();
             if (selection.isCaret()) {
-                return QVariant(selection.start().offset());
+                return QVariant(selection.start().m_offset);
             }
         }
         return QVariant();
