@@ -1,3 +1,10 @@
+2009-03-10  Xan Lopez  <xlopez@igalia.com>
+
+        Build fix, no review.
+
+        * WebView/WebFrame.mm:
+        (-[WebFrame _smartDeleteRangeForProposedRange:]):
+
 2009-03-09  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Kevin Decker.
